--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,10 +7,10 @@ exportClasses(ERGExperiment)
 exportMethods(AutoAverage)
 exportMethods(GetChannelNames)
 exportMethods(GetDOB)
-exportMethods(GetData)
 exportMethods(GetExamDate)
 exportMethods(GetGroupName)
 exportMethods(GetMarkerNames)
+exportMethods(GetMeasurements)
 exportMethods(GetPatientName)
 exportMethods(GetProtocolName)
 exportMethods(GetStimulusNames)
