GetAverage function added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(ImportEpsionMeasures)
 exportClasses(ERGExam)
 exportClasses(ERGExperiment)
 exportMethods(AutoAverage)
+exportMethods(GetAverageTraces)
 exportMethods(GetChannelNames)
 exportMethods(GetDOB)
 exportMethods(GetExamDate)
