Bugfixes and documentation updates

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,6 +21,9 @@ Imports:
     crayon,
     stringi,
     stringr,
+    gridExtra,
+    ggplot2,
+    ggpubr,
     EPhysData
 Encoding: UTF-8
 LazyData: true
