--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,6 @@ export(PlotExam)
 export(makeExampleERGSteps)
 export(newERGExam)
 exportClasses(ERGExam)
-exportMethods(AutoAverage)
 exportMethods(Channels)
 exportMethods(DOB)
 exportMethods(ExamDate)
@@ -35,6 +34,7 @@ importFrom(EPhysData,newEPhysSet)
 importFrom(crayon,green)
 importFrom(data.table,fread)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,element_line)
 importFrom(ggplot2,facet_grid)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_line)
@@ -42,6 +42,7 @@ importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,vars)
 importFrom(ggpubr,theme_pubr)
+importFrom(gridExtra,grid.arrange)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_remove)
 importFrom(stringr,str_trim)
