--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ exportMethods(StimulusTable)
 exportMethods(Subject)
 exportMethods(Subset)
 exportMethods(UpdateChannelNames)
+exportMethods(as.data.frame)
 importClassesFrom(EPhysData,EPhysData)
 importClassesFrom(EPhysData,EPhysSet)
 importFrom(EPhysData,Metadata)
@@ -46,5 +47,8 @@ importFrom(gridExtra,grid.arrange)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_remove)
 importFrom(stringr,str_trim)
+importFrom(tidyr,pivot_longer)
+importFrom(tidyr,starts_with)
 importFrom(units,as_units)
+importFrom(units,drop_units)
 importFrom(utils,read.csv)
