--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,9 @@ export(ImportEpsion)
 export(ImportEpsionProtocol)
 export(MergeERGExams)
 export(PlotExam)
+export(PlotIntensitySequence)
+export(PlotRecordings)
+export(PlotStepSequence)
 export(makeExampleERGSteps)
 export(newERGExam)
 exportClasses(ERGExam)
@@ -26,6 +29,8 @@ exportMethods(Subject)
 exportMethods(Subset)
 exportMethods(UpdateChannelNames)
 exportMethods(as.data.frame)
+import(dplyr)
+import(ggplot2)
 importClassesFrom(EPhysData,EPhysData)
 importClassesFrom(EPhysData,EPhysSet)
 importFrom(EPhysData,Metadata)
@@ -38,10 +43,14 @@ importFrom(ggplot2,aes)
 importFrom(ggplot2,element_line)
 importFrom(ggplot2,facet_grid)
 importFrom(ggplot2,facet_wrap)
+importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_line)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggtitle)
+importFrom(ggplot2,scale_color_manual)
+importFrom(ggplot2,theme)
 importFrom(ggplot2,vars)
+importFrom(ggpubr,theme_pubclean)
 importFrom(ggpubr,theme_pubr)
 importFrom(gridExtra,grid.arrange)
 importFrom(stringr,str_detect)
@@ -50,5 +59,6 @@ importFrom(stringr,str_trim)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,starts_with)
 importFrom(units,as_units)
+importFrom(units,deparse_unit)
 importFrom(units,drop_units)
 importFrom(utils,read.csv)
