--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,7 @@ Depends:
 Imports:
     data.table,
     tidyr,
+    dplyr,
     methods,
     knitr,
     units,
@@ -23,8 +24,7 @@ Imports:
     stringr,
     gridExtra,
     ggplot2,
-    ggpubr,
-    EPhysData
+    ggpubr
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.0
