--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ importClassesFrom(EPhysData,EPhysSet)
 importFrom(EPhysData,Metadata)
 importFrom(EPhysData,Subset)
 importFrom(EPhysData,as.data.frame)
+importFrom(EPhysData,newEPhysData)
 importFrom(EPhysData,newEPhysSet)
 importFrom(crayon,green)
 importFrom(data.table,fread)
@@ -53,6 +54,8 @@ importFrom(ggplot2,vars)
 importFrom(ggpubr,theme_pubclean)
 importFrom(ggpubr,theme_pubr)
 importFrom(gridExtra,grid.arrange)
+importFrom(methods,new)
+importFrom(stats,na.exclude)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_remove)
 importFrom(stringr,str_trim)
@@ -61,4 +64,7 @@ importFrom(tidyr,starts_with)
 importFrom(units,as_units)
 importFrom(units,deparse_unit)
 importFrom(units,drop_units)
+importFrom(utils,object.size)
 importFrom(utils,read.csv)
+importFrom(utils,setTxtProgressBar)
+importFrom(utils,txtProgressBar)
