Bug in Measurements(x) fixed

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,8 +15,6 @@ exportMethods(Channels)
 exportMethods(DOB)
 exportMethods(ExamDate)
 exportMethods(Eyes)
-exportMethods(GetAverageTraces)
-exportMethods(GetMeasurements)
 exportMethods(GroupName)
 exportMethods(MarkerNames)
 exportMethods(Measurements)
@@ -55,6 +53,7 @@ importFrom(ggpubr,theme_pubclean)
 importFrom(ggpubr,theme_pubr)
 importFrom(gridExtra,grid.arrange)
 importFrom(methods,new)
+importFrom(methods,validObject)
 importFrom(stats,na.exclude)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_remove)
