--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,6 +58,7 @@ importFrom(stats,na.exclude)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_remove)
 importFrom(stringr,str_trim)
+importFrom(stringr,word)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,starts_with)
 importFrom(units,as_units)
