Autoplace Markers methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,12 @@ export(PlotStepSequence)
 export(makeExampleERGSteps)
 export(newERGExam)
 exportClasses(ERGExam)
+exportMethods("AverageFunction<-")
+exportMethods("FilterFunction<-")
+exportMethods("Rejected<-")
+exportMethods(AutoPlaceMarkers)
 exportMethods(Channels)
+exportMethods(ClearMeasurements)
 exportMethods(DOB)
 exportMethods(ExamDate)
 exportMethods(Eyes)
@@ -20,22 +25,34 @@ exportMethods(MarkerNames)
 exportMethods(Measurements)
 exportMethods(PlotExam)
 exportMethods(ProtocolName)
+exportMethods(SetStandardFunctions)
 exportMethods(Steps)
 exportMethods(StimulusNames)
 exportMethods(StimulusTable)
 exportMethods(Subject)
 exportMethods(Subset)
 exportMethods(UpdateChannelNames)
+exportMethods(UpdateMeasurements)
 exportMethods(as.data.frame)
 import(dplyr)
 import(ggplot2)
 importClassesFrom(EPhysData,EPhysData)
 importClassesFrom(EPhysData,EPhysSet)
+importFrom(EPhysData,"AverageFunction<-")
+importFrom(EPhysData,"FilterFunction<-")
+importFrom(EPhysData,"Rejected<-")
+importFrom(EPhysData,GetData)
 importFrom(EPhysData,Metadata)
 importFrom(EPhysData,Subset)
+importFrom(EPhysData,TimeTrace)
 importFrom(EPhysData,as.data.frame)
 importFrom(EPhysData,newEPhysData)
 importFrom(EPhysData,newEPhysSet)
+importFrom(EPhysMethods,autoreject.by.distance)
+importFrom(EPhysMethods,autoreject.by.signalfree)
+importFrom(EPhysMethods,fastfourier)
+importFrom(EPhysMethods,filter.bandpass)
+importFrom(EPhysMethods,filter.detrend)
 importFrom(crayon,green)
 importFrom(data.table,fread)
 importFrom(ggplot2,aes)
