--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,31 +1,34 @@
-Package: ERGtools2
 Type: Package
+Package: ERGtools2
 Title: Importing and analysing Electroretinogram data in R
 Version: 0.3.0
-Author: person("Moritz", "Lindner", email = "moritz@lindnerlab.de", role = c("aut", "cre"))
+Author: person("Moritz", "Lindner", email = "moritz@lindnerlab.de", role =
+    c("aut", "cre"))
 Maintainer: Moritz Lindner <moritz@lindnerlab.de>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Description: This package contains an environment for working with electroretinogram data. It contains an import method for Diagnosys Espion data, but allows reading in of data also from other manufacturers with limited coding effort. Standard procedures like averaging, subsetting an visualization of individual exams are supported.
 License: GPL (>= 3)
-Remotes:
-    github::moritzlindner/EPhysData
-Depends:
-    EPhysData
+Depends: 
+    EPhysData (>= 0.9.2),
+    R (>= 2.10)
 Imports:
-    data.table,
-    tidyr,
-    dplyr,
-    methods,
-    knitr,
-    units,
-    remotes,
     crayon,
+    data.table,
+    dplyr,
+    ggplot2,
+    ggpubr,
+    gridExtra,
+    knitr,
+    methods,
+    remotes,
     stringi,
     stringr,
-    gridExtra,
-    ggplot2,
-    ggpubr
+    tidyr,
+    units,
+    EPhysMethods
+Remotes:
+    github::moritzlindner/EPhysData,
+    github::moritzlindner/EPhysMethods
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.2.0
 Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.2.3
