- documentation corrected - consistent naming for ggplot function - warnings supressed where irrelevant - ERGMeasurements object introduced

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,16 +3,22 @@
 export(CheckAvgFxSet)
 export(ImportEpsion)
 export(ImportEpsionProtocol)
-export(MergeERGExams)
 export(PlotIntensitySequence)
 export(PlotRecordings)
 export(PlotStepSequence)
 export(ggERGExam)
+export(ggIntensitySequence)
+export(ggPlotRecordings)
+export(ggStepSequence)
 export(newERGExam)
+export(newERGMeasurements)
 exportClasses(ERGExam)
+exportClasses(ERGMeasurements)
 exportMethods("AverageFunction<-")
 exportMethods("FilterFunction<-")
+exportMethods("Measurements<-")
 exportMethods("Rejected<-")
+exportMethods(AddMarker)
 exportMethods(AutoPlaceAB)
 exportMethods(AutoPlaceFlicker)
 exportMethods(AutoPlaceMarkers)
@@ -20,13 +26,17 @@ exportMethods(AutoPlaceVEP)
 exportMethods(Channels)
 exportMethods(ClearMeasurements)
 exportMethods(DOB)
+exportMethods(DropMarker)
 exportMethods(ExamDate)
 exportMethods(Eyes)
 exportMethods(GroupName)
 exportMethods(IndexOf)
 exportMethods(MarkerNames)
+exportMethods(Markers)
 exportMethods(Measurements)
+exportMethods(MergeERGExams)
 exportMethods(ProtocolName)
+exportMethods(Results)
 exportMethods(SetStandardFunctions)
 exportMethods(Steps)
 exportMethods(StimulusNames)
@@ -34,22 +44,27 @@ exportMethods(StimulusTable)
 exportMethods(Subject)
 exportMethods(Subset)
 exportMethods(UpdateChannelNames)
-exportMethods(UpdateMeasurements)
 exportMethods(as.data.frame)
 exportMethods(ggERGExam)
 exportMethods(ggERGTrace)
 import(dplyr)
-import(ggplot2)
 importClassesFrom(EPhysData,EPhysData)
 importClassesFrom(EPhysData,EPhysSet)
 importFrom(EPhysData,"AverageFunction<-")
 importFrom(EPhysData,"FilterFunction<-")
 importFrom(EPhysData,"Rejected<-")
+importFrom(EPhysData,AverageFunction)
+importFrom(EPhysData,FilterFunction)
 importFrom(EPhysData,GetData)
 importFrom(EPhysData,Metadata)
+importFrom(EPhysData,Rejected)
 importFrom(EPhysData,Subset)
 importFrom(EPhysData,TimeTrace)
+importFrom(EPhysData,`AverageFunction<-`)
+importFrom(EPhysData,`FilterFunction<-`)
+importFrom(EPhysData,`Rejected<-`)
 importFrom(EPhysData,as.data.frame)
+importFrom(EPhysData,ggEPhysData)
 importFrom(EPhysData,newEPhysData)
 importFrom(EPhysData,newEPhysSet)
 importFrom(EPhysMethods,autoreject.by.distance)
@@ -59,26 +74,34 @@ importFrom(EPhysMethods,filter.bandpass)
 importFrom(EPhysMethods,filter.detrend)
 importFrom(EPhysMethods,filter.lin.detrend)
 importFrom(crayon,green)
+importFrom(crayon,yellow)
 importFrom(data.table,fread)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,element_line)
 importFrom(ggplot2,facet_grid)
 importFrom(ggplot2,facet_wrap)
+importFrom(ggplot2,geom_errorbar)
 importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_label)
 importFrom(ggplot2,geom_line)
+importFrom(ggplot2,geom_point)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggtitle)
+importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_color_manual)
+importFrom(ggplot2,scale_x_log10)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,vars)
 importFrom(ggpubr,theme_pubclean)
 importFrom(ggpubr,theme_pubr)
 importFrom(gridExtra,grid.arrange)
+importFrom(methods,as)
 importFrom(methods,new)
 importFrom(methods,validObject)
 importFrom(plotly,ggplotly)
+importFrom(stats,median)
 importFrom(stats,na.exclude)
+importFrom(stats,var)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_remove)
 importFrom(stringr,str_trim)
@@ -88,6 +111,7 @@ importFrom(units,as_units)
 importFrom(units,deparse_unit)
 importFrom(units,drop_units)
 importFrom(units,set_units)
+importFrom(units,units_options)
 importFrom(utils,object.size)
 importFrom(utils,read.csv)
 importFrom(utils,setTxtProgressBar)
