--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(ggERGExam)
 export(ggIntensitySequence)
 export(ggPlotRecordings)
 export(ggStepSequence)
+export(interactiveMeasurements)
 export(newERGExam)
 export(newERGMeasurements)
 exportClasses(ERGExam)
@@ -50,6 +51,8 @@ exportMethods(ggERGTrace)
 import(dplyr)
 importClassesFrom(EPhysData,EPhysData)
 importClassesFrom(EPhysData,EPhysSet)
+importFrom(DT,dataTableOutput)
+importFrom(DT,renderDataTable)
 importFrom(EPhysData,"AverageFunction<-")
 importFrom(EPhysData,"FilterFunction<-")
 importFrom(EPhysData,"Rejected<-")
@@ -65,6 +68,7 @@ importFrom(EPhysData,`FilterFunction<-`)
 importFrom(EPhysData,`Rejected<-`)
 importFrom(EPhysData,as.data.frame)
 importFrom(EPhysData,ggEPhysData)
+importFrom(EPhysData,lapply)
 importFrom(EPhysData,newEPhysData)
 importFrom(EPhysData,newEPhysSet)
 importFrom(EPhysMethods,autoreject.by.distance)
@@ -78,6 +82,7 @@ importFrom(crayon,yellow)
 importFrom(data.table,fread)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,element_line)
+importFrom(ggplot2,element_text)
 importFrom(ggplot2,facet_grid)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_errorbar)
@@ -85,25 +90,55 @@ importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_label)
 importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_point)
+importFrom(ggplot2,geom_text)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_color_manual)
 importFrom(ggplot2,scale_x_log10)
 importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_minimal)
 importFrom(ggplot2,vars)
 importFrom(ggpubr,theme_pubclean)
 importFrom(ggpubr,theme_pubr)
 importFrom(gridExtra,grid.arrange)
+importFrom(magrittr,"%>%")
 importFrom(methods,as)
 importFrom(methods,new)
 importFrom(methods,validObject)
+importFrom(plotly,event_data)
+importFrom(plotly,event_register)
 importFrom(plotly,ggplotly)
+importFrom(plotly,plotlyOutput)
+importFrom(plotly,renderPlotly)
+importFrom(shiny,HTML)
+importFrom(shiny,actionButton)
+importFrom(shiny,column)
+importFrom(shiny,fluidPage)
+importFrom(shiny,fluidRow)
+importFrom(shiny,h4)
+importFrom(shiny,modalButton)
+importFrom(shiny,modalDialog)
+importFrom(shiny,observeEvent)
+importFrom(shiny,onSessionEnded)
+importFrom(shiny,reactive)
+importFrom(shiny,removeModal)
+importFrom(shiny,runApp)
+importFrom(shiny,selectInput)
+importFrom(shiny,shinyApp)
+importFrom(shiny,showModal)
+importFrom(shiny,stopApp)
+importFrom(shiny,tags)
+importFrom(shiny,textInput)
+importFrom(shiny,titlePanel)
+importFrom(shiny,validate)
+importFrom(shiny,verticalLayout)
 importFrom(stats,median)
 importFrom(stats,na.exclude)
 importFrom(stats,var)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_remove)
+importFrom(stringr,str_split)
 importFrom(stringr,str_trim)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,starts_with)
