--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ import(dplyr)
 importClassesFrom(EPhysData,EPhysData)
 importClassesFrom(EPhysData,EPhysSet)
 importFrom(DT,dataTableOutput)
+importFrom(DT,datatable)
 importFrom(DT,renderDataTable)
 importFrom(EPhysData,"AverageFunction<-")
 importFrom(EPhysData,"FilterFunction<-")
