--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,7 +40,7 @@ exportMethods(ProtocolName)
 exportMethods(Results)
 exportMethods(SetStandardFunctions)
 exportMethods(Steps)
-exportMethods(StimulusNames)
+exportMethods(Stimulus)
 exportMethods(StimulusTable)
 exportMethods(Subject)
 exportMethods(Subset)
