--- a/NAMESPACE
+++ b/NAMESPACE
@@ -103,7 +103,6 @@ importFrom(ggplot2,vars)
 importFrom(ggpubr,theme_pubclean)
 importFrom(ggpubr,theme_pubr)
 importFrom(gridExtra,grid.arrange)
-importFrom(magrittr,"%>%")
 importFrom(methods,as)
 importFrom(methods,new)
 importFrom(methods,validObject)
@@ -141,6 +140,7 @@ importFrom(stringr,str_detect)
 importFrom(stringr,str_remove)
 importFrom(stringr,str_split)
 importFrom(stringr,str_trim)
+importFrom(tidyr,"%>%")
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,starts_with)
 importFrom(units,as_units)
