--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(ggIntensitySequence)
 export(ggPlotRecordings)
 export(ggStepSequence)
 export(interactiveMeasurements)
+export(merge2ERGMeasurements)
 export(newERGExam)
 export(newERGMeasurements)
 exportClasses(ERGExam)
@@ -19,6 +20,10 @@ exportMethods("AverageFunction<-")
 exportMethods("FilterFunction<-")
 exportMethods("Measurements<-")
 exportMethods("Rejected<-")
+exportMethods("StimulusBackground<-")
+exportMethods("StimulusDescription<-")
+exportMethods("StimulusIntensity<-")
+exportMethods("StimulusType<-")
 exportMethods(AddMarker)
 exportMethods(AutoPlaceAB)
 exportMethods(AutoPlaceFlicker)
@@ -41,10 +46,15 @@ exportMethods(Results)
 exportMethods(SetStandardFunctions)
 exportMethods(Steps)
 exportMethods(Stimulus)
+exportMethods(StimulusBackground)
+exportMethods(StimulusDescription)
+exportMethods(StimulusIntensity)
 exportMethods(StimulusTable)
+exportMethods(StimulusType)
 exportMethods(Subject)
 exportMethods(Subset)
 exportMethods(UpdateChannelNames)
+exportMethods(Where)
 exportMethods(as.data.frame)
 exportMethods(ggERGExam)
 exportMethods(ggERGTrace)
