ImportEspion now includes a "where" statement.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,18 +2,29 @@
 
 export(CheckAvgFxSet)
 export(ImportEspion)
+export(ImportEspionInfo)
+export(ImportEspionMetadata)
 export(ImportEspionProtocol)
 export(PlotIntensitySequence)
 export(PlotRecordings)
 export(PlotStepSequence)
+export(as.std.channelname)
+export(as.std.eyename)
+export(erg_str)
+export(eye.haystack)
 export(ggERGExam)
 export(ggIntensitySequence)
 export(ggPlotRecordings)
 export(ggStepSequence)
 export(interactiveMeasurements)
+export(is.std.channelname)
 export(merge2ERGMeasurements)
 export(newERGExam)
 export(newERGMeasurements)
+export(od_str)
+export(op_str)
+export(os_str)
+export(vep_str)
 exportClasses(ERGExam)
 exportClasses(ERGMeasurements)
 exportMethods("AverageFunction<-")
@@ -146,8 +157,13 @@ importFrom(shiny,verticalLayout)
 importFrom(stats,median)
 importFrom(stats,na.exclude)
 importFrom(stats,var)
+importFrom(stringr,regex)
 importFrom(stringr,str_detect)
+importFrom(stringr,str_extract)
+importFrom(stringr,str_length)
 importFrom(stringr,str_remove)
+importFrom(stringr,str_remove_all)
+importFrom(stringr,str_replace_all)
 importFrom(stringr,str_split)
 importFrom(stringr,str_trim)
 importFrom(tidyr,"%>%")
