bugfixes in import methods load function still needs to be tested

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(ImportEspion)
 export(ImportEspionInfo)
 export(ImportEspionMetadata)
 export(ImportEspionProtocol)
+export(Load.ERGExam)
 export(PlotIntensitySequence)
 export(PlotRecordings)
 export(PlotStepSequence)
@@ -54,6 +55,7 @@ exportMethods(Measurements)
 exportMethods(MergeERGExams)
 exportMethods(ProtocolName)
 exportMethods(Results)
+exportMethods(Save)
 exportMethods(SetStandardFunctions)
 exportMethods(Steps)
 exportMethods(Stimulus)
@@ -83,6 +85,7 @@ importFrom(EPhysData,FilterFunction)
 importFrom(EPhysData,GetData)
 importFrom(EPhysData,Metadata)
 importFrom(EPhysData,Rejected)
+importFrom(EPhysData,Save)
 importFrom(EPhysData,Subset)
 importFrom(EPhysData,TimeTrace)
 importFrom(EPhysData,`AverageFunction<-`)
@@ -124,6 +127,7 @@ importFrom(ggplot2,vars)
 importFrom(ggpubr,theme_pubclean)
 importFrom(ggpubr,theme_pubr)
 importFrom(gridExtra,grid.arrange)
+importFrom(hdf5r,H5File)
 importFrom(methods,as)
 importFrom(methods,new)
 importFrom(methods,validObject)
@@ -174,7 +178,10 @@ importFrom(units,deparse_unit)
 importFrom(units,drop_units)
 importFrom(units,set_units)
 importFrom(units,units_options)
+importFrom(utils,compareVersion)
+importFrom(utils,getFromNamespace)
 importFrom(utils,object.size)
+importFrom(utils,packageVersion)
 importFrom(utils,read.csv)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
