--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(ImportEspion)
 export(ImportEspionInfo)
 export(ImportEspionMetadata)
 export(ImportEspionProtocol)
+export(ImportEspionStimTab)
 export(Load.ERGExam)
 export(PlotIntensitySequence)
 export(PlotRecordings)
