--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(ImportEspionMetadata)
 export(ImportEspionProtocol)
 export(ImportEspionStimTab)
 export(Load.ERGExam)
+export(MergeERGExams)
 export(PlotIntensitySequence)
 export(PlotRecordings)
 export(PlotStepSequence)
@@ -53,7 +54,6 @@ exportMethods(IndexOf)
 exportMethods(MarkerNames)
 exportMethods(Markers)
 exportMethods(Measurements)
-exportMethods(MergeERGExams)
 exportMethods(ProtocolName)
 exportMethods(Results)
 exportMethods(Save)
@@ -103,9 +103,11 @@ importFrom(EPhysMethods,fastfourier)
 importFrom(EPhysMethods,filter.bandpass)
 importFrom(EPhysMethods,filter.detrend)
 importFrom(EPhysMethods,filter.lin.detrend)
+importFrom(EPhysMethods,freq.to.w)
 importFrom(crayon,green)
 importFrom(crayon,yellow)
 importFrom(data.table,fread)
+importFrom(dplyr,summarise)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,element_line)
 importFrom(ggplot2,element_text)
@@ -116,6 +118,7 @@ importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_label)
 importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_point)
+importFrom(ggplot2,geom_ribbon)
 importFrom(ggplot2,geom_text)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggtitle)
