ggERGExam prints Subject ID on title of grob

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -133,6 +133,7 @@ importFrom(ggplot2,theme_minimal)
 importFrom(ggplot2,vars)
 importFrom(ggpubr,theme_pubclean)
 importFrom(ggpubr,theme_pubr)
+importFrom(grid,textGrob)
 importFrom(gridExtra,grid.arrange)
 importFrom(hdf5r,H5File)
 importFrom(methods,as)
