Multiple Bugfixes Methods added: RenameMarkers,DropRecordings

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ exportMethods(Channels)
 exportMethods(ClearMeasurements)
 exportMethods(DOB)
 exportMethods(DropMarker)
+exportMethods(DropRecordings)
 exportMethods(ExamDate)
 exportMethods(Eyes)
 exportMethods(GroupName)
@@ -56,6 +57,7 @@ exportMethods(MarkerNames)
 exportMethods(Markers)
 exportMethods(Measurements)
 exportMethods(ProtocolName)
+exportMethods(RenameMarker)
 exportMethods(Results)
 exportMethods(Save)
 exportMethods(SetStandardFunctions)
@@ -142,6 +144,7 @@ importFrom(plotly,event_register)
 importFrom(plotly,ggplotly)
 importFrom(plotly,plotlyOutput)
 importFrom(plotly,renderPlotly)
+importFrom(quantmod,findPeaks)
 importFrom(shiny,HTML)
 importFrom(shiny,actionButton)
 importFrom(shiny,column)
