Internalized several functions not required for end user

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,23 +12,15 @@ export(MergeERGExams)
 export(PlotIntensitySequence)
 export(PlotRecordings)
 export(PlotStepSequence)
-export(as.std.channelname)
 export(as.std.eyename)
-export(erg_str)
-export(eye.haystack)
 export(ggERGExam)
 export(ggIntensitySequence)
 export(ggPlotRecordings)
 export(ggStepSequence)
 export(interactiveMeasurements)
-export(is.std.channelname)
 export(merge2ERGMeasurements)
 export(newERGExam)
 export(newERGMeasurements)
-export(od_str)
-export(op_str)
-export(os_str)
-export(vep_str)
 exportClasses(ERGExam)
 exportClasses(ERGMeasurements)
 exportMethods("AverageFunction<-")
@@ -100,6 +92,7 @@ importFrom(EPhysData,newEPhysData)
 importFrom(EPhysData,newEPhysSet)
 importFrom(EPhysMethods,autoreject.by.distance)
 importFrom(EPhysMethods,autoreject.by.signalfree)
+importFrom(EPhysMethods,convert_to_unit)
 importFrom(EPhysMethods,fastfourier)
 importFrom(EPhysMethods,filter.bandpass)
 importFrom(EPhysMethods,filter.detrend)
