--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(PlotIntensitySequence)
 export(PlotRecordings)
 export(PlotStepSequence)
 export(as.std.eyename)
+export(exploreERGExam)
 export(ggERGExam)
 export(ggIntensitySequence)
 export(ggPlotRecordings)
@@ -70,6 +71,7 @@ exportMethods(as.data.frame)
 exportMethods(ggERGExam)
 exportMethods(ggERGTrace)
 import(dplyr)
+import(methods)
 importClassesFrom(EPhysData,EPhysData)
 importClassesFrom(EPhysData,EPhysSet)
 importFrom(DT,dataTableOutput)
@@ -103,6 +105,9 @@ importFrom(EPhysMethods,freq.to.w)
 importFrom(crayon,green)
 importFrom(crayon,yellow)
 importFrom(data.table,fread)
+importFrom(dplyr,"%>%")
+importFrom(dplyr,filter)
+importFrom(dplyr,mutate)
 importFrom(dplyr,summarise)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,element_line)
@@ -143,19 +148,25 @@ importFrom(quantmod,findPeaks)
 importFrom(shiny,HTML)
 importFrom(shiny,actionButton)
 importFrom(shiny,column)
+importFrom(shiny,dataTableOutput)
 importFrom(shiny,fluidPage)
 importFrom(shiny,fluidRow)
 importFrom(shiny,h4)
+importFrom(shiny,mainPanel)
 importFrom(shiny,modalButton)
 importFrom(shiny,modalDialog)
 importFrom(shiny,observeEvent)
 importFrom(shiny,onSessionEnded)
 importFrom(shiny,reactive)
 importFrom(shiny,removeModal)
+importFrom(shiny,renderDataTable)
+importFrom(shiny,req)
 importFrom(shiny,runApp)
 importFrom(shiny,selectInput)
 importFrom(shiny,shinyApp)
 importFrom(shiny,showModal)
+importFrom(shiny,sidebarLayout)
+importFrom(shiny,sidebarPanel)
 importFrom(shiny,stopApp)
 importFrom(shiny,tags)
 importFrom(shiny,textInput)
