bugs removed form interactiveMeasurements and exploreERGExam methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,7 +71,6 @@ exportMethods(as.data.frame)
 exportMethods(ggERGExam)
 exportMethods(ggERGTrace)
 import(dplyr)
-import(methods)
 importClassesFrom(EPhysData,EPhysData)
 importClassesFrom(EPhysData,EPhysSet)
 importFrom(DT,dataTableOutput)
@@ -105,9 +104,6 @@ importFrom(EPhysMethods,freq.to.w)
 importFrom(crayon,green)
 importFrom(crayon,yellow)
 importFrom(data.table,fread)
-importFrom(dplyr,"%>%")
-importFrom(dplyr,filter)
-importFrom(dplyr,mutate)
 importFrom(dplyr,summarise)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,element_line)
@@ -121,9 +117,11 @@ importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_ribbon)
 importFrom(ggplot2,geom_text)
+importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,guides)
+importFrom(ggplot2,label_wrap_gen)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_color_manual)
 importFrom(ggplot2,scale_fill_manual)
@@ -147,10 +145,13 @@ importFrom(plotly,renderPlotly)
 importFrom(quantmod,findPeaks)
 importFrom(shiny,HTML)
 importFrom(shiny,actionButton)
+importFrom(shiny,checkboxInput)
 importFrom(shiny,column)
+importFrom(shiny,conditionalPanel)
 importFrom(shiny,fluidPage)
 importFrom(shiny,fluidRow)
 importFrom(shiny,h4)
+importFrom(shiny,hr)
 importFrom(shiny,mainPanel)
 importFrom(shiny,modalButton)
 importFrom(shiny,modalDialog)
