--- a/NAMESPACE
+++ b/NAMESPACE
@@ -145,6 +145,7 @@ importFrom(plotly,renderPlotly)
 importFrom(quantmod,findPeaks)
 importFrom(shiny,HTML)
 importFrom(shiny,actionButton)
+importFrom(shiny,br)
 importFrom(shiny,checkboxInput)
 importFrom(shiny,column)
 importFrom(shiny,conditionalPanel)
@@ -157,6 +158,7 @@ importFrom(shiny,modalButton)
 importFrom(shiny,modalDialog)
 importFrom(shiny,observeEvent)
 importFrom(shiny,onSessionEnded)
+importFrom(shiny,plotOutput)
 importFrom(shiny,reactive)
 importFrom(shiny,removeModal)
 importFrom(shiny,req)
@@ -172,6 +174,9 @@ importFrom(shiny,textInput)
 importFrom(shiny,titlePanel)
 importFrom(shiny,validate)
 importFrom(shiny,verticalLayout)
+importFrom(shinyjs,extendShinyjs)
+importFrom(shinyjs,js)
+importFrom(shinyjs,useShinyjs)
 importFrom(stats,na.exclude)
 importFrom(stats,var)
 importFrom(stringr,regex)
