--- a/NAMESPACE
+++ b/NAMESPACE
@@ -93,6 +93,7 @@ importFrom(EPhysData,ggEPhysData)
 importFrom(EPhysData,lapply)
 importFrom(EPhysData,newEPhysData)
 importFrom(EPhysData,newEPhysSet)
+importFrom(EPhysMethods,autoreject.by.absolute.threshold)
 importFrom(EPhysMethods,autoreject.by.distance)
 importFrom(EPhysMethods,autoreject.by.signalfree)
 importFrom(EPhysMethods,convert_to_unit)
