Incorrectly named Metadata column 'Result' renamed to "Repeat"

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,7 +53,7 @@ exportMethods(Markers)
 exportMethods(Measurements)
 exportMethods(ProtocolName)
 exportMethods(RenameMarker)
-exportMethods(Results)
+exportMethods(Repeats)
 exportMethods(Save)
 exportMethods(SetStandardFunctions)
 exportMethods(Steps)
