cli implemented importEspion now has skip.validation option

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -102,8 +102,14 @@ importFrom(EPhysMethods,filter.bandpass)
 importFrom(EPhysMethods,filter.detrend)
 importFrom(EPhysMethods,filter.lin.detrend)
 importFrom(EPhysMethods,freq.to.w)
-importFrom(crayon,green)
-importFrom(crayon,yellow)
+importFrom(cli,cli_abort)
+importFrom(cli,cli_alert_danger)
+importFrom(cli,cli_alert_info)
+importFrom(cli,cli_alert_success)
+importFrom(cli,cli_alert_warning)
+importFrom(cli,cli_text)
+importFrom(cli,cli_ul)
+importFrom(cli,col_green)
 importFrom(data.table,fread)
 importFrom(dplyr,summarise)
 importFrom(ggplot2,aes)
