Error messages made more informative. CLI Progress bars Where made more robust

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,32 +1,33 @@
 Type: Package
 Package: ERGtools2
 Title: Importing and analysing Electroretinogram data in R
-Version: 0.7.0
+Version: 0.8.0
 Author: person("Moritz", "Lindner", email = "moritz@lindnerlab.de", role =
     c("aut", "cre"))
 Maintainer: Moritz Lindner <moritz@lindnerlab.de>
 Description: This package contains an environment for working with electroretinogram data. It contains an import method for Diagnosys Espion data, but allows reading in of data also from other manufacturers with limited coding effort. Standard procedures like averaging, subsetting an visualization of individual exams are supported.
 License: GPL (>= 3)
 Depends: 
-    EPhysData (>= 0.9.5),
+    EPhysData (>= 0.9.6),
     R (>= 2.10)
 Imports:
-    crayon,
     data.table,
     dplyr,
     ggplot2,
     ggpubr,
     gridExtra,
     plotly,
-    knitr,
     methods,
     remotes,
-    stringi,
     stringr,
     tidyr,
     units,
     shiny,
     DT,
+    quantmod,
+    shinyjs,
+    cli,
+    hdf5r,
     EPhysMethods (>= 0.2.0)
 Remotes:
     github::moritzlindner/EPhysData,
