--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,14 +15,19 @@ export(PlotRecordings)
 export(PlotStepSequence)
 export(as.std.eyename)
 export(exploreERGExam)
+export(eye.haystack)
 export(ggERGExam)
 export(ggIntensitySequence)
 export(ggPlotRecordings)
 export(ggStepSequence)
 export(interactiveMeasurements)
+export(is.std.eyename)
 export(merge2ERGMeasurements)
 export(newERGExam)
 export(newERGMeasurements)
+export(od_str)
+export(os_str)
+export(ou_str)
 exportClasses(ERGExam)
 exportClasses(ERGMeasurements)
 exportMethods("AverageFunction<-")
@@ -31,6 +36,7 @@ exportMethods("Measurements<-")
 exportMethods("Rejected<-")
 exportMethods("StimulusBackground<-")
 exportMethods("StimulusDescription<-")
+exportMethods("StimulusEnergy<-")
 exportMethods("StimulusIntensity<-")
 exportMethods("StimulusType<-")
 exportMethods(AddMarker)
@@ -60,17 +66,18 @@ exportMethods(Steps)
 exportMethods(Stimulus)
 exportMethods(StimulusBackground)
 exportMethods(StimulusDescription)
+exportMethods(StimulusEnergy)
 exportMethods(StimulusIntensity)
 exportMethods(StimulusTable)
 exportMethods(StimulusType)
 exportMethods(Subject)
 exportMethods(Subset)
 exportMethods(UpdateChannelNames)
+exportMethods(UpdateERGExam)
 exportMethods(Where)
 exportMethods(as.data.frame)
 exportMethods(ggERGExam)
 exportMethods(ggERGTrace)
-import(dplyr)
 importClassesFrom(EPhysData,EPhysData)
 importClassesFrom(EPhysData,EPhysSet)
 importFrom(DT,dataTableOutput)
@@ -103,15 +110,25 @@ importFrom(EPhysMethods,filter.detrend)
 importFrom(EPhysMethods,filter.lin.detrend)
 importFrom(EPhysMethods,freq.to.w)
 importFrom(cli,cli_abort)
-importFrom(cli,cli_alert_danger)
 importFrom(cli,cli_alert_info)
 importFrom(cli,cli_alert_success)
 importFrom(cli,cli_alert_warning)
+importFrom(cli,cli_inform)
+importFrom(cli,cli_progress_bar)
+importFrom(cli,cli_progress_done)
+importFrom(cli,cli_progress_update)
 importFrom(cli,cli_text)
 importFrom(cli,cli_ul)
+importFrom(cli,cli_warn)
 importFrom(cli,col_green)
 importFrom(data.table,fread)
+importFrom(dplyr,group_by)
+importFrom(dplyr,group_by_at)
+importFrom(dplyr,mutate)
+importFrom(dplyr,n)
+importFrom(dplyr,row_number)
 importFrom(dplyr,summarise)
+importFrom(dplyr,ungroup)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,element_line)
 importFrom(ggplot2,element_text)
