Increased flexibility of the AutoPlaceMarkers method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(newERGMeasurements)
 export(od_str)
 export(os_str)
 export(ou_str)
+export(validERGExam)
 exportClasses(ERGExam)
 exportClasses(ERGMeasurements)
 exportMethods("AverageFunction<-")
