--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Type: Package
 Package: ERGtools2
 Title: Importing and analysing Electroretinogram data in R
-Version: 0.8.0
+Version: 0.8.5
 Author: person("Moritz", "Lindner", email = "moritz@lindnerlab.de", role =
     c("aut", "cre"))
 Maintainer: Moritz Lindner <moritz@lindnerlab.de>
@@ -32,6 +32,8 @@ Imports:
 Remotes:
     github::moritzlindner/EPhysData,
     github::moritzlindner/EPhysMethods
+Suggests:
+    taxize
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
