Higher level methods accelerated by enabling object validation skip.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(ggIntensitySequence)
 export(ggPlotRecordings)
 export(ggStepSequence)
 export(interactiveMeasurements)
+export(interactiveMeasurements2)
 export(is.std.eyename)
 export(merge2ERGMeasurements)
 export(newERGElectrode)
