interactiveMeasurements bugs fixed and functionality improved

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,7 +23,6 @@ export(ggIntensitySequence)
 export(ggPlotRecordings)
 export(ggStepSequence)
 export(interactiveMeasurements)
-export(interactiveMeasurements2)
 export(is.std.eyename)
 export(merge2ERGMeasurements)
 export(newERGElectrode)
@@ -228,6 +227,7 @@ importFrom(shiny,conditionalPanel)
 importFrom(shiny,fluidPage)
 importFrom(shiny,fluidRow)
 importFrom(shiny,h4)
+importFrom(shiny,h5)
 importFrom(shiny,hr)
 importFrom(shiny,mainPanel)
 importFrom(shiny,modalButton)
